replace required parameter test_conditions by getting test conditions from performed tests, ignore test axis if it has no mandatory test and no conditional tests apply
